[package]
name = "cosmos-notifier-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
console_error_panic_hook = "0.1.7"
console_log = {version = "1.0.0", features = ["wasm-bindgen"] }
gloo-storage = "0.2.2"
gloo-timers = { version = "0.2.6", features = ["futures"] }
grpc-web-client = {git = "https://github.com/shifty11/grpc-web-client.git"}
js-sys = "0.3.61"
jsonwebtoken = "8.3.0"
log = "0.4.17"
prost = { version = "0.11", default-features = false }
prost-types = "0.11.8"
serde = "1.0.159"
serde_json = "1.0.95"
simple-error = "0.3.0"
sycamore = { version = "0.8", features = ["suspense"] }
sycamore-router = "0.8"
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Storage", "StorageEvent", "Window", "Performance", "PerformanceTiming"] }

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost"] }
